# recallium

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: local-service-api.md  local-service-openapi.json  opencode-adapter-contract.md
docs/wiki/: API-Reference.md  About-the-Author.md  Adapter-and-Plugin-Integration.md  CLI-Reference.md  Concepts.md  Configuration.md  FAQ.md  Features-and-Commands.md  Home.md  Installation.md  Logs.md  MCP-Server.md  Quick-Start.md  Service-Management.md  Troubleshooting.md  Verified-Supported-Plugins.md  _Sidebar.md
src/recallium/: __init__.py  __main__.py  cli.py  config.py  core.py  embeddings.py  errors.py  logging.py  mcp_server.py  model_state.py  models.py  search.py  service.py  service_contract.py  service_manager.py  storage.py
src/recallium/migrations/: __init__.py  runner.py
src/recallium/migrations/versions/: __init__.py  v001_initial_memory_schema.py  v002_embedding_chunks_and_jobs.py
src/recollectium/: __init__.py  __main__.py  cli.py  config.py  core.py  dev_seed.py  embeddings.py  errors.py  logging.py  mcp_server.py  model_state.py  models.py  search.py  service.py  service_contract.py  service_manager.py  storage.py  update.py
src/recollectium/migrations/: __init__.py  runner.py
src/recollectium/migrations/versions/: __init__.py
tests/: __init__.py  conftest.py  test_changelog.py  test_cli.py  test_config.py  test_core.py  test_dev_seed.py  test_logging.py  test_mcp_stdio.py  test_model_readiness.py  test_model_state.py  test_models.py  test_scaffold.py  test_search.py  test_service.py  test_service_lifecycle.py  test_service_manager.py  test_storage.py
