[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recallium"
version = "0.1.0"
description = "Recallium Core local memory engine"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124",
    "uvicorn>=0.38",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8",
    "ruff>=0.5",
    "pyright>=1.1",
]

[project.scripts]
recallium = "recallium.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"

[tool.pyright]
pythonVersion = "3.14"
include = ["src", "tests"]
