[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recollectium"
version = "0.1.0"
description = "Recollectium Core local memory engine"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [
    { name = "Recollectium contributors" },
]
keywords = ["ai", "agents", "embeddings", "local-first", "memory", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "argcomplete>=3.0",
    "cryptography==46.0.3",
    "fastapi>=0.124",
    "fastembed>=0.7.3",
    "mcp>=1.27.1",
    "platformdirs>=4",
    "uvicorn>=0.38",
]

[project.urls]
Homepage = "https://github.com/AlfonsoDehesa/recollectium"
Repository = "https://github.com/AlfonsoDehesa/recollectium"
Issues = "https://github.com/AlfonsoDehesa/recollectium/issues"

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
    "pyright>=1.1",
    "pytest-cov>=7.1.0",
]

[project.scripts]
recollectium = "recollectium.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
timeout_method = "thread"

[tool.ruff]
target-version = "py312"

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests"]
